[package]
name = "colou-rs"
version = "0.1.0"
authors = ["L3afMe <L3afMeAlon3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
num = "0.3.1"
once_cell = "1.6.0"
rand = "0.8.3"
regex = "1.4.3"
